--- a/Restaurant/RestaurantHomepage.html
+++ b/Restaurant/RestaurantHomepage.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UrbanEats</title>
+    <title>RestaurantFood</title>
     <link rel ="stylesheet" href="styles.css">
-    <link rel="icon" href="Copilot_20250720_172133.png" type="image/png">
+    <link rel="icon" href="Copilot_20250720_171836-removebg-preview.png" type="image/png">
 
 </head>
 <body>
@@ -13,11 +13,18 @@
         <p class="header">
             <a href="" class="h1-links">Menu</a>
             <a href="" class="h1-links">Order</a>
-            <a href="" class="h1-links">Login</a>
-            
+            <a href="" class="h1-links">Login</a>    
         </p>
         <div class="Logo">
             <img src="Copilot_20250720_171836-removebg-preview.png" alt="Urban Eats Logo" style="width: 35vw; height: auto;">    
+        </div>
+    </div>
+    <div class="content-container">
+        <img src="pexels-emmy-e-1252107-2381069.jpg" alt="manager" id="manager">
+        <div class="content">
+        <h1>Welcome to Urban Eats</h1>
+        <p>"Experience the best food in town!</p>
+        <p>Order your favorite dishes online and enjoy a delightful dining experience."</p>
         </div>
     </div>
 </body>
