--- a/Restaurant/RestaurantHomepage.html
+++ b/Restaurant/RestaurantHomepage.html
@@ -24,7 +24,8 @@
         <div class="content">
         <h1>Welcome to Urban Eats</h1>
         <p>"Experience the best food in town!</p>
-        <p>Order your favorite dishes online and enjoy a delightful dining experience."</p>
+        <p>Order your favorite dishes online and enjoy a delightful dining experience.</p>
+        <p>Explore our menu and place your order now!"</p>
         </div>
     </div>
 </body>
