--- a/Restaurant/RestaurantHomepage.html
+++ b/Restaurant/RestaurantHomepage.html
@@ -22,11 +22,34 @@
     <div class="content-container">
         <img src="pexels-emmy-e-1252107-2381069.jpg" alt="manager" id="manager">
         <div class="content">
-        <h1>Welcome to Urban Eats</h1>
-        <p>"Experience the best food in town!</p>
-        <p>Order your favorite dishes online and enjoy a delightful dining experience.</p>
-        <p>Explore our menu and place your order now!"</p>
+            <h1>Welcome to Urban Eats</h1>
+            <p>"Experience the best food in town!</p>
+            <p>Order your favorite dishes online and enjoy a delightful dining experience.</p>
+            <p>Explore our menu and place your order now!"</p>
         </div>
-    </div>
+    </div>    
+        <div class="About">
+            <h2 style="text-align: center;">About Us</h2>
+            <p>RestaurantFood is a premier restaurant offering a diverse menu of delicious dishes made with the freshest ingredients. Our chefs are dedicated to providing an unforgettable dining experience for our guests.</p>
+            <p>Whether you're looking for a quick bite or a full-course meal, we have something for everyone. Join us today and discover why Urban Eats is the go-to destination for food lovers!</p>        
+        </div>    
+        <h2 style="text-align: center;"id="h2-1">Menu Preview</h2>
+        <div class="menu-preview">
+            <div class="menu-item">
+                <img src="pexels-enginakyurt-2347311.jpg" alt="Dish 1">
+                <p>Stir Fry Noodles </p>
+            </div>
+            <div class="menu-item">
+                <img src="pexels-vinkay-33332965.jpg" alt="Dish 2">
+                <p>Chicken Tacos</p>
+            </div>
+            <div class="menu-item">
+                <img src="pexels-jonathanborba-2983101.jpg" alt="Dish 3">
+                <p>Hamburger and Fries</p>
+            </div>
+        </div>
+        <div class="footer">
+            <p>© 2023 Urban Eats. All rights reserved.</p>
+        </div>
 </body>
 </html>
