--- a/Restaurant/RestaurantHomepage.html
+++ b/Restaurant/RestaurantHomepage.html
@@ -12,12 +12,12 @@
     <div class="top">
         <p class="header">
             <a href="" class="h1-links">Menu</a>
+            <a href="" class="h1-links">About Us</a>
             <a href="" class="h1-links">Order</a>
             <a href="" class="h1-links">Login</a>    
         </p>
         <div class="Logo">
-            <img src="Copilot_20250720_171836-removebg-preview.png" alt="Urban Eats Logo" style="width: 35vw; height: auto;">    
-        </div>
+            <img src="Copilot_20250720_171836-removebg-preview.png" alt="Urban Eats Logo" style="width: 35vw; height: auto;">        </div>
     </div>
     <div class="content-container">
         <img src="pexels-emmy-e-1252107-2381069.jpg" alt="manager" id="manager">
@@ -28,28 +28,34 @@
             <p>Explore our menu and place your order now!"</p>
         </div>
     </div>    
-        <div class="About">
-            <h2 style="text-align: center;">About Us</h2>
-            <p>RestaurantFood is a premier restaurant offering a diverse menu of delicious dishes made with the freshest ingredients. Our chefs are dedicated to providing an unforgettable dining experience for our guests.</p>
-            <p>Whether you're looking for a quick bite or a full-course meal, we have something for everyone. Join us today and discover why Urban Eats is the go-to destination for food lovers!</p>        
-        </div>    
+    <div class="mobile-only">
+        <a href="tel:+254700123456" class="order-btn">Order Now 📞</a>
+    </div>
+
         <h2 style="text-align: center;"id="h2-1">Menu Preview</h2>
         <div class="menu-preview">
             <div class="menu-item">
                 <img src="pexels-enginakyurt-2347311.jpg" alt="Dish 1">
-                <p>Stir Fry Noodles </p>
+                <p>Stir Fry Noodles 
+                    <a href="" class="order-link">Order Now</a>
+                </p>
             </div>
             <div class="menu-item">
                 <img src="pexels-vinkay-33332965.jpg" alt="Dish 2">
-                <p>Chicken Tacos</p>
+                <p>Chicken Tacos
+                    <a href="" class="order-link">Order Now</a>
+                </p>
             </div>
             <div class="menu-item">
                 <img src="pexels-jonathanborba-2983101.jpg" alt="Dish 3">
-                <p>Hamburger and Fries</p>
+                <p>Hamburger and Fries
+                    <a href="" class="order-link">Order Now</a>
+                </p>
             </div>
         </div>
+        <hr>
         <div class="footer">
-            <p>© 2023 Urban Eats. All rights reserved.</p>
+            <p>© 2023 RestaurantFood. All rights reserved.</p>
         </div>
 </body>
 </html>
