--- a/Restaurant/RestaurantHomepage.html
+++ b/Restaurant/RestaurantHomepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RestaurantFood</title>
+    <title>Urban Catering</title>
     <link rel ="stylesheet" href="styles.css">
     <link rel="icon" href="Copilot_20250720_171836-removebg-preview.png" type="image/png">
 
@@ -12,7 +12,7 @@
     <div class="top">
         <p class="header">
             <a href="" class="h1-links">Menu</a>
-            <a href="" class="h1-links">About Us</a>
+            <a href="" class="h1-links">Book Now</a>
             <a href="" class="h1-links">Order</a>
             <a href="" class="h1-links">Login</a>    
         </p>
@@ -36,26 +36,25 @@
         <div class="menu-preview">
             <div class="menu-item">
                 <img src="pexels-enginakyurt-2347311.jpg" alt="Dish 1">
-                <p>Stir Fry Noodles 
-                    <a href="" class="order-link">Order Now</a>
-                </p>
+                <p>Stir Fry Noodles </p>
             </div>
             <div class="menu-item">
                 <img src="pexels-vinkay-33332965.jpg" alt="Dish 2">
-                <p>Chicken Tacos
-                    <a href="" class="order-link">Order Now</a>
-                </p>
+                <p>Chicken Tacos</p>
             </div>
             <div class="menu-item">
                 <img src="pexels-jonathanborba-2983101.jpg" alt="Dish 3">
-                <p>Hamburger and Fries
-                    <a href="" class="order-link">Order Now</a>
-                </p>
+                <p>Hamburger and Fries</p>
             </div>
         </div>
+    <p id="View">View our full menu <a href="Menu.html"style="color:white;">here>>></a></p>
+    <div class="desktop-only">
+        <a href="tel:+254700123456" class="order-btn">Order Now 📞</a>
+    </div>
+   
         <hr>
         <div class="footer">
-            <p>© 2023 RestaurantFood. All rights reserved.</p>
+            <p>© 2025 Urban Catering. All rights reserved.</p>
         </div>
 </body>
 </html>
