--- a/Restaurant/UrbanCatering.html
+++ b/Restaurant/UrbanCatering.html
@@ -12,9 +12,9 @@
     <div class="top">
         <p class="header">
             <a href="Login.html" class="h1-links">Login</a>
-            <a href="" class="h1-links">Book Now</a>
-            <a href="" class="h1-links">Order</a>
-            <a href="" class="h1-links">Menu</a>    
+            <a href="Booking.html" class="h1-links">Book Now</a>
+            <a href="Order.html" class="h1-links">Order</a>
+            <a href="Menu.html" class="h1-links">Menu</a>    
         </p>
         <div class="Logo">
             <img src="Copilot_20250720_171836-removebg-preview.png" alt="Urban Eats Logo" style="width: 35vw; height: auto;">        </div>
