--- a/Restaurant/Register.html
+++ b/Restaurant/Register.html
@@ -13,7 +13,7 @@
         <div class="login-container-1">
             <a href="UrbanCatering.html"> <<< Back To Home</a>
             <form action="UrbanCatering.html" method="post">
-                <h2>Login to Urban Eats</h2>
+                <h2>Login to Urban Catering</h2>
                 <label for="First Name">First Name:</label>
                 <input type="text" id="First Name" name="First Name" required>
                 <br><br>
