--- a/Restaurant/UrbanCatering.html
+++ b/Restaurant/UrbanCatering.html
@@ -6,7 +6,15 @@
     <title>Urban Catering</title>
     <link rel ="stylesheet" href="styles.css">
     <link rel="icon" href="Copilot_20250720_171836-removebg-preview.png" type="image/png">
-
+    <style>
+        @media screen and (max-width:600px){
+            .Logo{
+                position: relative;
+                top: 25%;
+                padding-left: 34%;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="top">
@@ -17,7 +25,8 @@
             <a href="Menu.html" class="h1-links">Menu</a>    
         </p>
         <div class="Logo">
-            <img src="Copilot_20250720_171836-removebg-preview.png" alt="Urban Eats Logo" style="width: 35vw; height: auto;">        </div>
+            <img src="Copilot_20250720_171836-removebg-preview.png" alt="Urban Eats Logo" style="width: 35vw; height: auto;">       
+        </div>
     </div>
     <div class="content-container">
         <img src="pexels-emmy-e-1252107-2381069.jpg" alt="manager" id="manager">
