--- a/Restaurant/Register.html
+++ b/Restaurant/Register.html
@@ -24,7 +24,7 @@
                 <input type="email" id="Email" name="email" required placeholder="Email@gmail.com">
                 <br><br>
                 <label for="Phone Number">Phone Number:</label>
-                <input type="tel" id="Phone Number" name="Phone Numebr" required placeholder="+254 123 456 789">
+                <input type="tel" id="Phone Number" name="Phone Number" required placeholder="+254 123 456 789">
                 <br><br>
                 <label for="Address">Address:</label>
                 <input type="text" id="Address" name="Address" required>
