--- a/Restaurant/Booking.html
+++ b/Restaurant/Booking.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BooK Now</title>
     <link rel ="stylesheet" href="styles.css">
-    <link rel="icon" href="Copilot_20250720_171836-removebg-preview.png" type="image/png">
+    <link rel="icon" href="Copilot_20250720_171836.png" type="image/png">
 </head>
 <body>
         <div class="Form">
