--- a/Restaurant/UrbanCatering.html
+++ b/Restaurant/UrbanCatering.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Urban Catering</title>
     <link rel ="stylesheet" href="styles.css">
-    <link rel="icon" href="Copilot_20250720_171836-removebg-preview.png" type="image/png">
-    <style>
+    <link rel="icon" href="Copilot_20250720_171836.png" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<a href="https://www.flaticon.com/free-icons/instagram" title="instagram icons">Instagram icons created by cobynecz - Flaticon</a>    <style>
         @media screen and (max-width:600px){
             .Logo{
                 position: relative;
                 top: 25%;
                 padding-left: 34%;
+            }
+            .top{
+                padding-top: -10vh;
             }
         }
     </style>
@@ -65,6 +71,11 @@
         <hr>
         <div class="footer">
             <p>© 2025 Urban Catering. All rights reserved.</p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook">Facebook</a>
+                <a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram">Instagram</a>
+                <a href="https://www.x.com" target="_blank"><img src="twitter.png" alt="Twitter">X</a>
+            </div>
         </div>
 </body>
 </html>
