--- a/Restaurant/Menu.html
+++ b/Restaurant/Menu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel ="stylesheet" href="styles.css">
-    <link rel="icon" href="Copilot_20250720_171836-removebg-preview.png" type="image/png">
+    <link rel="icon" href="Copilot_20250720_171836.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap" rel="stylesheet">
