--- a/Restaurant/Menu.html
+++ b/Restaurant/Menu.html
@@ -12,13 +12,16 @@
     <style>
         @media (max-width: 600px) {
             .top-menu{
-                background-image: url("pexels-isabella-mendes-107313-858508.jpg");
                 background-size: cover;
                 background-position: center;
                 height: 50vh;
             }
-            #Menu-header h1{
-                color:#d4af37 ;
+            .order-btn{
+                margin-left: -100vw;
+                margin-top: 4%;
+            }
+            .menu-section {
+                margin-left: -3.3vw;
             }
         }
     </style>
@@ -33,6 +36,142 @@
             </p>
             <h1 id="Menu-header"><a href="Menu.html" style="text-decoration:wavy;color: white;">Menu</a></h1>
         </div>
-        
+        <div class="menu-container">
+            <div class="menu-links">
+                <a href="#appetizers">Appetizers</a>
+                <a href="#main-courses">Main Courses</a>
+                <a href="#desserts">Desserts</a>
+                <a href="#beverages">Beverages</a>
+            </div>
+            <p style="text-align: center; text-decoration: underline;font-weight: bold;font-size: xx-large;"id="h2-2">Our Delicious Menu</p>
+            <button class="order-btn" style="margin-left:36vw;">Order Now 📞</button>
+            <div class="menu-section" id="appetizers">
+                <h3 style="text-align: center;">Appetizers</h3>
+                <ul class="menu-list">
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
+                    </li>
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    <li>                        
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    </li>
+                </ul>
+                <ul class="menu-list">
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
+                    </li>
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    <li>                        
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    </li>
+                </ul>
+            </div>
+            <div class="menu-section" id="Main Courses">
+                <h3 style="text-align: center;">Main Courses</h3>
+                <ul class="menu-list">
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
+                    </li>
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    <li>                        
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    </li>
+                </ul>
+                <ul class="menu-list">
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
+                    </li>
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    <li>                        
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    </li>
+                </ul>
+            </div>
+            <div class="menu-section" id="Desserts">
+                <h3 style="text-align: center;">Desserts</h3>
+                <ul class="menu-list">
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
+                    </li>
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    <li>                        
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    </li>
+                </ul>
+                <ul class="menu-list">
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
+                    </li>
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    <li>                        
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    </li>
+                </ul>
+            </div>
+            <div class="menu-section" id="Beverages">
+                <h3 style="text-align: center;">Beverages</h3>
+                <ul class="menu-list">
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
+                    </li>
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    <li>                        
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    </li>
+                </ul>
+                <ul class="menu-list">
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
+                    </li>
+                    <li>
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    <li>                        
+                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                    </li>
+                </ul>
+            </div>
+
+
+        <hr>
+        <div class="footer">
+            <p>© 2025 Urban Catering. All rights reserved.</p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook">Facebook</a>
+                <a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram">Instagram</a>
+                <a href="https://www.x.com" target="_blank"><img src="twitter.png" alt="Twitter">X</a>
+            </div>
+        </div>
+
 </body>
 </html>
