--- a/Restaurant/UrbanCatering.html
+++ b/Restaurant/UrbanCatering.html
@@ -43,30 +43,37 @@
             <p>Explore our menu and place your order now!"</p>
         </div>
     </div>    
-    <div class="mobile-only">
-        <a href="tel:+254700123456" class="order-btn">Order Now 📞</a>
-    </div>
-
         <h2 style="text-align: center;"id="h2-1">Menu Preview</h2>
-        <p id="View">View our full menu <a href="Menu.html"style="color:white;">here>>></a></p>
+    <ul class="menu-list-1">
+        <li>
+            <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+            <p>Appetizers</p>
+            <div class="menu-buttons">
+                <a href="Menu.html"><button>View</button></a>
+            </div>
+        </li>
+        <li>
+            <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+            <p>Main Courses</p>
+            <div class="menu-buttons">
+                <button>View>></button>
+            </div>
+        <li>                        
+            <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+            <p>Desserts</p>
+            <div class="menu-buttons">
+                <button>View>></button>
+            </div>
+        </li>
+            <li>                        
+            <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+            <p>Beverages</p>
+            <div class="menu-buttons">
+                <button>View>></button>
+            </div>
+        </li>
 
-        <div class="menu-preview">
-            <div class="menu-item">
-                <img src="pexels-enginakyurt-2347311.jpg" alt="Dish 1">
-                <p>Stir Fry Noodles </p>
-            </div>
-            <div class="menu-item">
-                <img src="pexels-vinkay-33332965.jpg" alt="Dish 2">
-                <p>Chicken Tacos</p>
-            </div>
-            <div class="menu-item">
-                <img src="pexels-jonathanborba-2983101.jpg" alt="Dish 3">
-                <p>Hamburger and Fries</p>
-            </div>
-        </div>
-    <div class="desktop-only">
-        <a href="tel:+254700123456" class="order-btn">Order Now 📞</a>
-    </div>
+    </ul>
    
         <hr>
         <div class="footer">
