--- a/Restaurant/Menu.html
+++ b/Restaurant/Menu.html
@@ -17,7 +17,7 @@
                 height: 50vh;
             }
             .order-btn{
-                margin-left: -100vw;
+                margin-left: 35vw;
                 margin-top: 4%;
             }
             .menu-section {
@@ -38,131 +38,42 @@
         </div>
         <div class="menu-container">
             <div class="menu-links">
-                <a href="#appetizers">Appetizers</a>
-                <a href="#main-courses">Main Courses</a>
-                <a href="#desserts">Desserts</a>
-                <a href="#beverages">Beverages</a>
+                <a href="Menu.html">Appetizers</a>
+                <a href="Main-Course.html">Main Courses</a>
+                <a href="Desserts.html">Desserts</a>
+                <a href="Beverages.html">Beverages</a>
             </div>
             <p style="text-align: center; text-decoration: underline;font-weight: bold;font-size: xx-large;"id="h2-2">Our Delicious Menu</p>
-            <button class="order-btn" style="margin-left:36vw;">Order Now 📞</button>
             <div class="menu-section" id="appetizers">
                 <h3 style="text-align: center;">Appetizers</h3>
                 <ul class="menu-list">
                     <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <img src="pexels-rosali-iraheta-44399-166031.jpg" alt="Appetizer 1" class="menu-image">
                         <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
                     </li>
                     <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+                        <img src="pexels-askar-abayev-5638471.jpg" alt="Appetizer 1" class="menu-image">
                         <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
                     <li>                        
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                        <img src="pexels-cottonbro-10071279.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Toasteries - $4.99 <button>Add to Order</button></p>
                     </li>
                 </ul>
                 <ul class="menu-list">
                     <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
+                        <img src="pexels-askar-abayev-5638471.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Spring Rolls - $3.48 <button>Add to Order</button></p>
                     </li>
                     <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                        <img src="pexels-cottonbro-10071279.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Samosa Trio - $2.32 <button>Add to Order</button></p>
                     <li>                        
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
+                        <img src="pexels-teejay-1362534.jpg" alt="Appetizer 1" class="menu-image">
+                        <p>Choma Skewers - $4.64 <button>Add to Order</button></p>
                     </li>
                 </ul>
             </div>
-            <div class="menu-section" id="Main Courses">
-                <h3 style="text-align: center;">Main Courses</h3>
-                <ul class="menu-list">
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
-                    </li>
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    <li>                        
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    </li>
-                </ul>
-                <ul class="menu-list">
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
-                    </li>
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    <li>                        
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    </li>
-                </ul>
-            </div>
-            <div class="menu-section" id="Desserts">
-                <h3 style="text-align: center;">Desserts</h3>
-                <ul class="menu-list">
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
-                    </li>
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    <li>                        
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    </li>
-                </ul>
-                <ul class="menu-list">
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
-                    </li>
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    <li>                        
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    </li>
-                </ul>
-            </div>
-            <div class="menu-section" id="Beverages">
-                <h3 style="text-align: center;">Beverages</h3>
-                <ul class="menu-list">
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
-                    </li>
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    <li>                        
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    </li>
-                </ul>
-                <ul class="menu-list">
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Spring Rolls - $5.99 <button>Add to Order</button></p>
-                    </li>
-                    <li>
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    <li>                        
-                        <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
-                        <p>Garlic Bread - $4.99 <button>Add to Order</button></p>
-                    </li>
-                </ul>
-            </div>
-
-
+            <button class="order-btn"><a href="Order.html" style="text-decoration: none; color: white;">Order Now 📞</a></button>
         <hr>
         <div class="footer">
             <p>© 2025 Urban Catering. All rights reserved.</p>
