--- a/Restaurant/UrbanCatering.html
+++ b/Restaurant/UrbanCatering.html
@@ -46,31 +46,23 @@
         <h2 style="text-align: center;"id="h2-1">Menu Preview</h2>
     <ul class="menu-list-1">
         <li>
-            <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+            <img src="pexels-rosali-iraheta-44399-166031.jpg"class="menu-image">
             <p>Appetizers</p>
-            <div class="menu-buttons">
-                <a href="Menu.html"><button>View</button></a>
-            </div>
+            <p><a href="Appetizers.html" class="m-links">View>></a></p>
         </li>
         <li>
-            <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+            <img src="pexels-valeriya-33469321.jpg" class="menu-image">
             <p>Main Courses</p>
-            <div class="menu-buttons">
-                <button>View>></button>
-            </div>
+            <p><a href="Menu.html" class="m-links">View>></a></p>
         <li>                        
-            <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+            <img src="pexels-quang-nguyen-vinh-222549-2144112.jpg" class="menu-image">
             <p>Desserts</p>
-            <div class="menu-buttons">
-                <button>View>></button>
-            </div>
+            <p><a href="Desserts.html" class="m-links">View>></a></p>
         </li>
             <li>                        
-            <img src="pexels-enginakyurt-2347311.jpg" alt="Appetizer 1" class="menu-image">
+            <img src="pexels-johnny-edgardo-guzman-258690-1889571.jpg" alt="Appetizer 1" class="menu-image">
             <p>Beverages</p>
-            <div class="menu-buttons">
-                <button>View>></button>
-            </div>
+            <p><a href="Beverages.html" class="m-links">View>></a></p>
         </li>
 
     </ul>
@@ -85,4 +77,4 @@
             </div>
         </div>
 </body>
-</html>
+</htm
