--- a/Restaurant/UrbanCatering.html
+++ b/Restaurant/UrbanCatering.html
@@ -27,7 +27,7 @@
         <p class="header">
             <a href="Login.html" class="h1-links">Login</a>
             <a href="Booking.html" class="h1-links">Book Now</a>
-            <a href="Order.html" class="h1-links">Order</a>
+                <a href="Menu.html" class="h1-links">Order</a>
             <a href="Menu.html" class="h1-links">Menu</a>    
         </p>
         <div class="Logo">
