--- a/Restaurant/Desserts.html
+++ b/Restaurant/Desserts.html
@@ -31,7 +31,7 @@
             <p class="header">
                 <a href="Login.html" class="h1-links">Login</a>
                 <a href="Booking.html" class="h1-links">Book Now</a>
-                <a href="Order.html" class="h1-links">Order</a>
+                <a href="Menu.html" class="h1-links">Order</a>
                 <a href="UrbanCatering.html" class="h1-links">Home</a>
             </p>
             <h1 id="Menu-header"><a href="Menu.html" style="text-decoration:wavy;color: white;">Menu</a></h1>
